# pyodide-components

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.js
docs/: TODO.md  component_instances.md  conf.py  downloader.md  faster_pyodide_testing.md  import_pyodide.md  index.md  loadable_apps.md  mock_fetch.md  nodejs_setup.md  playwright.md  playwright_pyodide.md  project_init.md  pytest.md  python_setup.md  refactor_speedup.md  registry_revisited.md  simple_components.md  simple_registry.md  vite_cleanup.md  vitest.md  worker.md  worker_main.md  worker_message.md
src/pyodide_components/: __init__.py  counter.py  downloader.py  fixtures.py  idiomorph.js  index.html  main.js  reset_state.html  worker.js
tests/: conftest.py  main.test.js  setup.js  setup.test.js  test_counter.py  test_fixtures.py  test_init.py  test_pages.py  worker.test.js
